AIM ik for weapon is working
Now there is IK for two handed weapons, but remember, i havent still added IK for all weapons yet.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,99 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+/Assets/Scenes/Sandbox/LightingData.asset
+/Assets/Scenes/Sandbox/LightingData.asset.meta
+/Assets/Scenes/Sandbox/Lightmap-0_comp_dir.png
+/Assets/Scenes/Sandbox/Lightmap-0_comp_dir.png.meta
+/Assets/Scenes/Sandbox/Lightmap-0_comp_light.exr
+/Assets/Scenes/Sandbox/Lightmap-0_comp_light.exr.meta
+/Assets/Scenes/Sandbox/Lightmap-1_comp_dir.png
+/Assets/Scenes/Sandbox/Lightmap-1_comp_dir.png.meta
+/Assets/Scenes/Sandbox/Lightmap-1_comp_light.exr
+/Assets/Scenes/Sandbox/Lightmap-1_comp_light.exr.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellOptionalData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellOptionalData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.asset
+/Assets/Scenes/Sandbox/ProbeVolumeData.asset.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSharedData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSharedData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSupportData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSupportData.bytes.meta
+/Assets/Scenes/Sandbox/Sandbox Baking Set.asset
+/Assets/Scenes/Sandbox/Sandbox Baking Set.asset.meta
+/Assets/Scenes/Sandbox/Test.lighting
+/Assets/Scenes/Sandbox/Test.lighting.meta
+/Assets/Scenes/Sandbox/LightingData.asset
+/Assets/Scenes/Sandbox/LightingData.asset.meta
+/Assets/Scenes/Sandbox/Lightmap-0_comp_dir.png
+/Assets/Scenes/Sandbox/Lightmap-0_comp_dir.png.meta
+/Assets/Scenes/Sandbox/Lightmap-0_comp_light.exr
+/Assets/Scenes/Sandbox/Lightmap-0_comp_light.exr.meta
+/Assets/Scenes/Sandbox/Lightmap-1_comp_dir.png
+/Assets/Scenes/Sandbox/Lightmap-1_comp_dir.png.meta
+/Assets/Scenes/Sandbox/Lightmap-1_comp_light.exr
+/Assets/Scenes/Sandbox/Lightmap-1_comp_light.exr.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellOptionalData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellOptionalData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.asset
+/Assets/Scenes/Sandbox/ProbeVolumeData.asset.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSharedData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSharedData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSupportData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSupportData.bytes.meta
+/Assets/Scenes/Sandbox/Sandbox Baking Set.asset
+/Assets/Scenes/Sandbox/Sandbox Baking Set.asset.meta
+/Assets/Scenes/Sandbox/Test.lighting
+/Assets/Scenes/Sandbox/Test.lighting.meta
+/Assets/Scenes/Sandbox/LightingData.asset
+/Assets/Scenes/Sandbox/LightingData.asset.meta
+/Assets/Scenes/Sandbox/Lightmap-0_comp_dir.png
+/Assets/Scenes/Sandbox/Lightmap-0_comp_dir.png.meta
+/Assets/Scenes/Sandbox/Lightmap-0_comp_light.exr
+/Assets/Scenes/Sandbox/Lightmap-0_comp_light.exr.meta
+/Assets/Scenes/Sandbox/Lightmap-1_comp_dir.png
+/Assets/Scenes/Sandbox/Lightmap-1_comp_dir.png.meta
+/Assets/Scenes/Sandbox/Lightmap-1_comp_light.exr
+/Assets/Scenes/Sandbox/Lightmap-1_comp_light.exr.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellOptionalData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellOptionalData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.asset
+/Assets/Scenes/Sandbox/ProbeVolumeData.asset.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSharedData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSharedData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSupportData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSupportData.bytes.meta
+/Assets/Scenes/Sandbox/Sandbox Baking Set.asset
+/Assets/Scenes/Sandbox/Sandbox Baking Set.asset.meta
+/Assets/Scenes/Sandbox/Test.lighting
+/Assets/Scenes/Sandbox/Test.lighting.meta
+/Assets/Scenes/Sandbox/LightingData.asset
+/Assets/Scenes/Sandbox/LightingData.asset.meta
+/Assets/Scenes/Sandbox/Lightmap-0_comp_dir.png
+/Assets/Scenes/Sandbox/Lightmap-0_comp_dir.png.meta
+/Assets/Scenes/Sandbox/Lightmap-0_comp_light.exr
+/Assets/Scenes/Sandbox/Lightmap-0_comp_light.exr.meta
+/Assets/Scenes/Sandbox/Lightmap-1_comp_dir.png
+/Assets/Scenes/Sandbox/Lightmap-1_comp_dir.png.meta
+/Assets/Scenes/Sandbox/Lightmap-1_comp_light.exr
+/Assets/Scenes/Sandbox/Lightmap-1_comp_light.exr.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellOptionalData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData-Default.CellOptionalData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.asset
+/Assets/Scenes/Sandbox/ProbeVolumeData.asset.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSharedData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSharedData.bytes.meta
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSupportData.bytes
+/Assets/Scenes/Sandbox/ProbeVolumeData.CellSupportData.bytes.meta
+/Assets/Scenes/Sandbox/Sandbox Baking Set.asset
+/Assets/Scenes/Sandbox/Sandbox Baking Set.asset.meta
+/Assets/Scenes/Sandbox/Test.lighting
+/Assets/Scenes/Sandbox/Test.lighting.meta
